[package]
name = "ya-mbtiles-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.9.0" }
actix-cors = "0.7.0"
sqlite = "0.36.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
sanitize-filename = "0.6.0"
clap = "4.4.13"
pyo3-ffi = "0.23.1"
derive_more = "0.99.18"
env_logger = "0.11.5"
log = "0.4.22"

[dependencies.pyo3]
version = "0.23.1"
features = ["auto-initialize"]
